fix: right fluid spacing

--- a/src/components/composition/Spacing/Spacing.module.scss
+++ b/src/components/composition/Spacing/Spacing.module.scss
@@ -98,8 +98,8 @@
       margin-right: var(--spacing-xl);
     }
 
-    &-right {
-      margin-left: var(--spacing-fluid);
+    &-fluid {
+      margin-right: var(--spacing-fluid);
     }
   }
 
